--- a/frontend/src/main/ngx/src/assets/i18n/en.json
+++ b/frontend/src/main/ngx/src/assets/i18n/en.json
@@ -13,5 +13,60 @@
   "ERROR_SESSION_EXPIRED": "Session expired.",
   "ERROR_USER_REQUIRED": "Incorrect username.",
   "ERROR_PASS_REQUIRED": "Incorrect password.",
-  "ERROR_USER_PASS_INCORRECT": "Invalid username or password."
+  "ERROR_USER_PASS_INCORRECT": "Invalid username or password.",
+
+  "CUSTOMERS": "Customers",
+
+  "ID": "Id.",
+  "NAME": "Name",
+  "SURNAME": "Surname",
+  "STARTDATE": "Start date",
+  "EMAIL": "Email",
+  "PHOTO": "Photo",
+
+  "CUSTOMER_PERSONAL_INFORMATION": "Personal Information",
+  "CUSTOMERID": "Customer Id.",
+  "PHONE": "Phone",
+  "CUSTOMERTYPEID": "Customer type",
+  "ADDRESS": "Address",
+  "LONGITUDE": "Longitude",
+  "LATITUDE": "Latitude",
+  "COMMENTS": "Comments",
+
+  "EMPLOYEES": "Employees",
+  "EMPLOYEEID": "Employee Id.",
+  "EMPLOYEETYPEID": "Employee type",
+  "EMPLOYEENAME": "Name",
+  "EMPLOYEESURNAME": "Surname",
+  "EMPLOYEEADDRESS": "Address",
+  "EMPLOYEECOMMENTS": "Comments",
+  "EMPLOYEESTARTDATE": "Start date",
+  "EMPLOYEEPHOTO": "Photo",
+  "EMPLOYEEEMAIL": "Mail",
+  "OFFICEID": "Office",
+  "EMPLOYEEPHONE": "Phone",
+  "EMPLOYEE_PERSONAL_INFORMATION": "Employee details",
+
+  "BRANCHES": "Branches",
+
+  "ACCOUNTS": "Accounts",
+  "ENTITYID": "Entity",
+  "CDID": "CD",
+  "ANID": "Account",
+  "ENDDATE": "End date",
+  "INTERESRATE": "% Interest",
+  "ACCOUNTTYP": "Account type",
+
+  "ACCOUNTNUMBER": "Account number",
+
+  "INTERESRATE_MONTHLY": "Monthly interest rate",
+
+  "BRANCH_INFORMATION":"Branch information",
+  "CUSTOMERS_INFORMATION":"Branch customers information",
+  "BALANCE":"Balance",
+
+  "DATE_": "Date",
+  "CONCEPT": "Concept",
+  "MOVEMENT": "Movement",
+  "MOVEMENTTYPEID": "Movement type"
 }
